[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Icons/arrowRight.png" type="Texture" id=1]
[ext_resource path="res://GUI/Icons/arrowLeft.png" type="Texture" id=2]
[ext_resource path="res://GUI/Icons/up.png" type="Texture" id=3]
[ext_resource path="res://Player/MobileControls.gd" type="Script" id=4]
[ext_resource path="res://GUI/Icons/checkmark.png" type="Texture" id=5]
[ext_resource path="res://GUI/Icons/exitLeft.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.498039 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_detail = 20

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[node name="MobileControls" type="Control"]
modulate = Color( 1, 1, 1, 0.698039 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 922.0
margin_right = 1022.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit2" type="TouchScreenButton" parent="Panel2"]
normal = ExtResource( 6 )
pressed = ExtResource( 6 )
shape = SubResource( 2 )
action = "p4_movement_rigt"

[node name="Left" type="TouchScreenButton" parent="."]
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 2 )
action = "p4_movement_left"

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 104, 0 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )
shape = SubResource( 2 )
action = "p4_movement_rigt"

[node name="Quit" type="TouchScreenButton" parent="."]
position = Vector2( 208, 0 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )
shape = SubResource( 2 )
action = "p4_movement_rigt"

[node name="Jump" type="TouchScreenButton" parent="."]
position = Vector2( 924, 0 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
shape = SubResource( 2 )

[node name="Ready" type="TouchScreenButton" parent="."]
position = Vector2( 820, 0 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
shape = SubResource( 2 )
action = "p4_movement_rigt"

[connection signal="pressed" from="Panel2/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="released" from="Quit" to="." method="_on_Quit_released"]
[connection signal="pressed" from="Jump" to="." method="_on_Jump_pressed"]
[connection signal="released" from="Jump" to="." method="_on_Jump_released"]
[connection signal="pressed" from="Ready" to="." method="_on_Ready_pressed"]
[connection signal="released" from="Ready" to="." method="_on_Ready_released"]
